--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-monitor_speed = 115200
+monitor_speed = 9600
 lib_deps = 
             knolleary/PubSubClient @ ^2.8
+            bblanchon/ArduinoJson @ ^6.17.3
